--- a/css/theme/black.css
+++ b/css/theme/black.css
@@ -226,10 +226,7 @@ body {
   -moz-transition: all 0.15s linear;
   transition: all 0.15s linear; }
 
-.reveal a:hover img {
-  background: rgba(255, 255, 255, 0.2);
-  border-color: #42affa;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
+.reveal a:hover img { }
 
 /*********************************************
  * NAVIGATION CONTROLS
